Moving to Dynamic Branch

--- a/addactivity.ui
+++ b/addactivity.ui
@@ -35,7 +35,7 @@
      <x>60</x>
      <y>30</y>
      <width>311</width>
-     <height>131</height>
+     <height>151</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
@@ -46,38 +46,38 @@
       </property>
      </widget>
     </item>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="lineEdit_code"/>
+    </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>Name</string>
+       <string>subcode</string>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_3">
       <property name="text">
-       <string>Budget</string>
+       <string>Time</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="lineEdit_code"/>
-    </item>
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEdit_name"/>
-    </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="lineEdit_budget"/>
+     <widget class="QLineEdit" name="lineEdit_time"/>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
-       <string>Manager</string>
+       <string>Description</string>
       </property>
      </widget>
     </item>
     <item row="3" column="1">
-     <widget class="QLineEdit" name="lineEdit_manager"/>
+     <widget class="QLineEdit" name="lineEdit_description"/>
+    </item>
+    <item row="1" column="1">
+     <widget class="QComboBox" name="comboBox"/>
     </item>
    </layout>
   </widget>
