--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>10</y>
+      <x>680</x>
+      <y>240</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -30,8 +30,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>70</y>
+      <x>680</x>
+      <y>290</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -40,13 +40,23 @@
      <string>ADD</string>
     </property>
    </widget>
-   <widget class="QTableView" name="tableView">
+   <widget class="QDateEdit" name="dateEdit">
     <property name="geometry">
      <rect>
-      <x>75</x>
-      <y>171</y>
-      <width>591</width>
-      <height>331</height>
+      <x>40</x>
+      <y>20</y>
+      <width>110</width>
+      <height>26</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTableView" name="dailyActivitiesTbl">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>130</y>
+      <width>256</width>
+      <height>192</height>
      </rect>
     </property>
    </widget>
