--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -57,6 +57,19 @@
      <string>ADD ENTRY</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="saveJsonBtn">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>490</y>
+      <width>101</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save to Json</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
