--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -154,6 +154,13 @@ border-color: rgb(164, 0, 0);</string>
       </property>
      </widget>
     </item>
+    <item row="5" column="2">
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>Monthly Activity Table</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
