--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,6 +27,9 @@
       <property name="displayFormat">
        <string>yyyy-MM-dd</string>
       </property>
+      <property name="calendarPopup">
+       <bool>true</bool>
+      </property>
       <property name="date">
        <date>
         <year>2021</year>
